--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-   <canvas id="pong" width="1000" height="600"></canvas>
+    <canvas id="pong" width="800" height="600" style="display: none;"></canvas>
+    <div id="message" class="centered-message">Press Enter to Start</div>    
    <script src="./js/script.js"></script>
 </body>
 </html>
